Use JAXB from Maven
Closes #412

This should work on all the JDKs.